# routes/authRoutes.js
@@ -7,11 +7,15 @@ const {
   login,
   logout,
   verifyEmail,
+  forgotPassword,
+  resetPassword,
 } = require("../controllers/authController");
 
 router.route("/register").post(register);
 router.route("/login").post(login);
 router.route("/logout").get(authenticateUser, logout);
 router.route("/verify-email").post(verifyEmail);
+router.route("/reset-password").post(resetPassword);
+router.route("/forgot-password").post(forgotPassword);
 
 module.exports = router;
